--- a/development.ini
+++ b/development.ini
@@ -1,5 +1,6 @@
 [DEFAULT]
-STORAGE_PATH = /home/skartavykh/PycharmProjects/media-bot/storage
+STORAGE_PATH = /storage
+DATABASE_PATH = /database/db.sqlite
 
 
 [SOURCES]
