--- a/development.ini
+++ b/development.ini
@@ -2,6 +2,9 @@
 STORAGE_PATH = /storage
 DATABASE_PATH = /database/db.sqlite
 
+REDIS_HOST = localhost
+REDIS_PORT = 6379
+
 
 [SOURCES]
 TEST = https://www.kommersant.ru
