--- a/development.ini
+++ b/development.ini
@@ -5,6 +5,11 @@ DATABASE_PATH = /database/db.sqlite
 REDIS_HOST = localhost
 REDIS_PORT = 6379
 
+POSTGRES_HOST = localhost
+POSTGRES_PORT = 5500
+POSTGRES_USER = admin
+POSTGRES_PASSWORD = password
+
 
 [SOURCES]
 TEST = https://www.kommersant.ru
