TODO: clean all apps.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,3 +27,30 @@ services:
     ports:
       - "5672:5672"
       - "15672:15672"
+
+#  spark-master:
+#    image: apache/spark:3.2.1
+#    ports:
+#      - "8080:8080"
+#      - "7077:7077"
+#    environment:
+#      - SPARK_MASTER_URL=spark://spark-master:7077
+#      - SPARK_MASTER_UI_ADDRESS=http://localhost:8080
+#    command: [ "/opt/spark/bin/spark-class", "org.apache.spark.deploy.master.Master" ]
+#  spark-worker:
+#    image: apache/spark:3.2.1
+#    environment:
+#      - SPARK_MASTER_URL=spark://spark-master:7077
+#    command: [ "/opt/spark/bin/spark-class", "org.apache.spark.deploy.worker.Worker" ]
+#    depends_on:
+#      - spark-master
+#  jupyter:
+#    image: jupyter/pyspark-notebook:latest
+#    ports:
+#      - "8888:8888"
+#    environment:
+#      - SPARK_MASTER_URL=spark://spark-master:7077
+#    command: [ "start-notebook.sh", "--NotebookApp.token=''" ]
+#    depends_on:
+#      - spark-master
+#      - spark-worker
