initial commit - write bot from python to golang

--- a/BotApp/.env-template
+++ b/BotApp/.env-template
@@ -1,2 +1,5 @@
-BOT_TOKEN = "YOUR TOKEN FROM BotFather"
-API_NEWS_FEED_KEY = "API_NEWS_FEED_TOKEN"
+IS_LOCAL_DEV = True or False
+
+BOT_TOKEN = "bot token"
+API_NEWS_FEED_KEY = "news feed api key"
+NEWS_DATA_IO_KEY = "news data key"
