--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,6 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: postgres
     volumes:
-      - postgres-data:/var/lib/postgresql/data
-      - ./scripts/create_database_schemas.sh:/docker-entrypoint-initdb.d/create_database_schemas.sh
+      - ./scripts/init_database_schemas.sql:/docker-entrypoint-initdb.d/init_database_schemas.sql
     ports:
       - "5500:5432"
-
-volumes:
-  postgres-data:
