frontend UI service (for DEVELOP) is ready.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,10 +4,9 @@ WORKDIR /app
 
 COPY . .
 
+RUN npm config set strict-ssl false
 RUN npm ci
 RUN npm run build
 ENV NODE_ENV=production
-
-EXPOSE 3000
 
 CMD [ "npx", "serve", "build" ]
