--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,8 @@ services:
       - ./scripts/init_database_schemas.sql:/docker-entrypoint-initdb.d/init_database_schemas.sql
     ports:
       - "5500:5432"
+  frontend:
+    build: ./frontend
+    container_name: frontendUIApp
+    ports:
+      - "8000:3000"
