--- a/DataApp/pyspark-loader/parse/Dockerfile
+++ b/DataApp/pyspark-loader/parse/Dockerfile
@@ -8,6 +8,8 @@ COPY ./requirements.txt /app-code/requirements.txt
 
 
 RUN apt-get update && apt-get install -y htop
+RUN apt-get install ca-certificates
+RUN apt-get update && apt-get install -y iputils-ping
 RUN pip install --trusted-host pypi.org --trusted-host files.pythonhosted.org --no-cache-dir --upgrade -r /app-code/requirements.txt
 RUN python -m pip install --upgrade certifi
 
