Adding directories with processed WARC-PATH and WARC files.

--- a/DataApp/pyspark-loader/parse/.env-template
+++ b/DataApp/pyspark-loader/parse/.env-template
@@ -1,5 +1,8 @@
+DEBUG = True/False - launch mode
 WARC_PATHS_DIR = directory path with paths files
+WARC_PATHS_DIR_PROCESSED = directory path with processed warc paths files, those that are "processed" once
 WARC_FILES_DIR = directory path with loaded WARC dumps
+WARC_FILES_DIR_PROCESSED = directory path with processed warc files, those that are "processed" once
 RAW_HTML_DUMP_DIR = directory with raw HTML files
 
 WARC_CRAWL_NAMES = "
